--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
   <meta name="theme-color" content="#2196f3">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>My App</title>
+  <title>MSAP</title>
+
+  <link rel="apple-touch-startup-image" href="img/launch.png">
   <!--
     Notice the use of %PUBLIC_URL% in the tag above.
     It will be replaced with the URL of the `public` folder during the build.
