--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,5 @@
     To create a production bundle, use `npm run build`.
   -->
 </body>
-<script type="text/javascript" src="cordova.js" ></script>
+<!-- <script type="text/javascript" src="cordova.js" ></script> -->
 </html>
